--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   background: var(--bg);
   color: var(--text);
+  font-family: system-ui, -apple-system, Segoe UI, sans-serif;
 }
 
-/* Layout */
 .container {
   max-width: 900px;
   margin: auto;
@@ -34,22 +33,14 @@ header {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  margin-bottom: 20px;
 }
 
-h1 {
-  margin: 0;
-}
-
-/* Search */
 .search {
-  padding: 12px 14px;
-  font-size: 15px;
+  padding: 12px;
   border-radius: 8px;
   border: 1px solid var(--border);
 }
 
-/* Tags */
 .tags {
   display: flex;
   flex-wrap: wrap;
@@ -58,62 +49,56 @@ h1 {
 
 .tag {
   padding: 6px 12px;
-  font-size: 13px;
-  border-radius: 999px;
-  border: 1px solid var(--border);
+  border-radius: 50px;
   background: var(--tag);
+  border: 1px solid var(--border);
   cursor: pointer;
 }
 
 .tag.active {
   background: var(--accent);
   color: white;
-  border-color: var(--accent);
 }
 
 /* Category */
 .category {
-  margin-top: 24px;
-  font-size: 18px;
+  margin-top: 26px;
+  padding-bottom: 6px;
+  border-bottom: 1px solid var(--border);
   font-weight: 600;
   color: var(--muted);
-  border-bottom: 1px solid var(--border);
-  padding-bottom: 6px;
 }
 
-/* Cards */
+/* Card */
 .card {
+  display: flex;
+  gap: 14px;
   background: var(--card);
-  border: 1px solid var(--border);
   border-radius: 10px;
-  padding: 18px;
+  border: 1px solid var(--border);
   margin-top: 14px;
+  padding: 14px;
 }
 
-.card-header {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 6px;
+.card img {
+  width: 110px;
+  height: 110px;
+  object-fit: cover;
+  border-radius: 8px;
+  border: 1px solid var(--border);
+}
+
+.card-body {
+  flex: 1;
 }
 
 .number {
-  font-weight: bold;
   color: var(--muted);
+  font-size: 12px;
 }
 
-.card h3 {
-  margin: 0;
-}
-
-.card p {
-  margin: 0;
-  color: var(--muted);
-  white-space: pre-wrap;
-}
-
-/* Button */
-.copy {
-  margin-top: 10px;
+button {
+  margin-top: 8px;
   padding: 8px 14px;
   border-radius: 6px;
   border: none;
@@ -122,115 +107,82 @@ h1 {
   cursor: pointer;
 }
 
-.copy:hover {
+button:hover {
   opacity: 0.9;
 }
 
-/* Footer */
 footer {
+  margin: 40px 0;
   text-align: center;
-  margin: 50px 0 20px;
   color: var(--muted);
-}
-
-/* Mobile */
-@media (max-width: 600px) {
-  .container {
-    padding: 16px;
-  }
 }
 </style>
 </head>
 
 <body>
-
 <div class="container">
   <header>
     <h1>Prompt Library</h1>
-
-    <input
-      class="search"
-      id="searchInput"
-      placeholder="Search prompts..."
-      oninput="renderPrompts()"
-    />
-
-    <div class="tags" id="tagContainer"></div>
+    <input id="searchInput" class="search" placeholder="Search prompts..." oninput="render()" />
+    <div id="tagContainer" class="tags"></div>
   </header>
 
   <main id="promptContainer"></main>
 
-  <footer>Powered by Notion</footer>
+  <footer>Powered by Notion + Gemini</footer>
 </div>
 
 <script>
-let allPrompts = [];
+let prompts = [];
 let activeTag = null;
 
-/* ===== Load from API ===== */
-async function loadPrompts() {
-  try {
-    const res = await fetch("/api/prompts");
-    const json = await res.json();
+async function load() {
+  const res = await fetch("/api/prompts");
+  prompts = await res.json();
 
-    allPrompts = Array.isArray(json) ? json : [];
+  prompts.forEach(p => {
+    p.tags = p.tags || [];
+  });
 
-    allPrompts.forEach(p => {
-      p.title = p.title || "Untitled";
-      p.prompt = p.prompt || "";
-      p.category = p.category || "General";
-      p.tags = Array.isArray(p.tags) ? p.tags : [];
-    });
+  prompts.sort((a,b)=> a.category.localeCompare(b.category));
 
-    allPrompts.sort((a, b) => a.category.localeCompare(b.category));
-
-    renderTags();
-    renderPrompts();
-
-  } catch (err) {
-    document.getElementById("promptContainer").innerHTML =
-      "<p style='color:red'>Failed to load prompts</p>";
-  }
+  renderTags();
+  render();
 }
 
-/* ===== Tags ===== */
 function renderTags() {
-  const tagSet = new Set();
-  allPrompts.forEach(p => p.tags.forEach(t => tagSet.add(t)));
+  const set = new Set();
+  prompts.forEach(p => p.tags.forEach(t=> set.add(t)));
 
-  const container = document.getElementById("tagContainer");
-  container.innerHTML = "";
+  const el = document.getElementById("tagContainer");
+  el.innerHTML = "";
 
-  [...tagSet].sort().forEach(tag => {
-    const el = document.createElement("div");
-    el.className = "tag";
-    el.textContent = tag;
-
-    el.onclick = () => {
-      activeTag = activeTag === tag ? null : tag;
+  [...set].sort().forEach(tag => {
+    const div = document.createElement("div");
+    div.className = "tag";
+    div.textContent = tag;
+    if (tag === activeTag) div.classList.add("active");
+    div.onclick = () => {
+      activeTag = (activeTag === tag) ? null : tag;
       renderTags();
-      renderPrompts();
+      render();
     };
-
-    if (tag === activeTag) el.classList.add("active");
-    container.appendChild(el);
+    el.appendChild(div);
   });
 }
 
-/* ===== Render Prompts ===== */
-function renderPrompts() {
+function render() {
   const container = document.getElementById("promptContainer");
   const search = document.getElementById("searchInput").value.toLowerCase();
-
   container.innerHTML = "";
-  let currentCategory = "";
-  let counter = 1;
 
-  allPrompts
+  let currentCategory = "";
+  let count = 1;
+
+  prompts
     .filter(p =>
       (!activeTag || p.tags.includes(activeTag)) &&
-      (p.title.toLowerCase().includes(search) ||
-       p.prompt.toLowerCase().includes(search))
+      (p.title.toLowerCase().includes(search) || p.prompt.toLowerCase().includes(search))
     )
     .forEach(p => {
       if (p.category !== currentCategory) {
@@ -240,25 +192,25 @@ function renderPrompts() {
 
       container.innerHTML += `
         <div class="card">
-          <div class="card-header">
-            <div class="number">#${counter}</div>
+          <img src="/api/image?prompt=${encodeURIComponent(p.title)}" />
+          <div class="card-body">
+            <div class="number">#${count}</div>
             <h3>${p.title}</h3>
+            <p>${p.prompt}</p>
+            <button onclick="navigator.clipboard.writeText(\`${p.prompt}\`)">
+              Copy
+            </button>
           </div>
-          <p>${p.prompt}</p>
-          <button class="copy" onclick="navigator.clipboard.writeText(\`${p.prompt}\`)">
-            Copy
-          </button>
         </div>
       `;
-      counter++;
+
+      count++;
     });
 
-  if (counter === 1) {
-    container.innerHTML = "<p>No prompts found.</p>";
-  }
+  if (count === 1) container.innerHTML = "<p>No prompts found.</p>";
 }
 
-document.addEventListener("DOMContentLoaded", loadPrompts);
+document.addEventListener("DOMContentLoaded", load);
 </script>
 
 </body>
