--- a/index.html
+++ b/index.html
@@ -1,78 +1,181 @@
-export default async function handler(req, res) {
-  try {
-    const {
-      GEMINI_API_KEY,
-      KV_REST_API_URL,
-      KV_REST_API_TOKEN
-    } = process.env;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Prompt Library</title>
 
-    const { prompt } = req.query;
-
-    if (!prompt) return res.status(400).json({ error: "Missing prompt" });
-
-    if (!GEMINI_API_KEY)
-      return res.status(500).json({ error: "Missing GEMINI_API_KEY" });
-
-    if (!KV_REST_API_URL || !KV_REST_API_TOKEN)
-      return res.status(500).json({ error: "Missing KV configuration" });
-
-
-    // =============== CACHE CHECK =================
-    const cacheKey = `img_cache:${prompt}`;
-    const cacheRes = await fetch(`${KV_REST_API_URL}/get/${cacheKey}`, {
-      headers: { Authorization: `Bearer ${KV_REST_API_TOKEN}` }
-    });
-
-    const cacheData = await cacheRes.json();
-
-    if (cacheData?.result) {
-      const img = Buffer.from(cacheData.result, "base64");
-      res.setHeader("Content-Type", "image/png");
-      return res.send(img);
-    }
-
-
-    // =============== GEMINI IMAGE GENERATION =================
-    const response = await fetch(
-      `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateImages?key=${GEMINI_API_KEY}`,
-      {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ prompt: { text: prompt } })
-      }
-    );
-
-    const data = await response.json();
-
-    if (!data.images?.[0]?.base64)
-      return res.status(500).json({ error: "No image generated" });
-
-    const base64 = data.images[0].base64;
-
-
-    // =============== SAVE TO CACHE FOREVER =================
-    await fetch(`${KV_REST_API_URL}/set/${cacheKey}`, {
-      method: "POST",
-      headers: {
-        Authorization: `Bearer ${KV_REST_API_TOKEN}`,
-        "Content-Type": "text/plain"
-      },
-      body: base64
-    });
-
-    // Optional: expire in 90 days (comment out if you want true forever)
-    await fetch(`${KV_REST_API_URL}/expire/${cacheKey}/7776000`, {
-      headers: { Authorization: `Bearer ${KV_REST_API_TOKEN}` }
-    });
-
-
-    // Return Image
-    const img = Buffer.from(base64, "base64");
-    res.setHeader("Content-Type", "image/png");
-    res.send(img);
-
-  } catch (err) {
-    console.error(err);
-    res.status(500).json({ error: "Image service failed" });
-  }
+<style>
+:root {
+  --bg: #f8f9fb;
+  --card: #ffffff;
+  --text: #111;
+  --muted: #666;
+  --border: #e5e7eb;
+  --accent: #2563eb;
+  --tag: #eef2ff;
 }
+
+body {
+  margin: 0;
+  background: var(--bg);
+  color: var(--text);
+  font-family: system-ui, -apple-system, Segoe UI, sans-serif;
+}
+
+.container { max-width: 900px; margin: auto; padding: 24px; }
+
+header { display: flex; flex-direction: column; gap: 12px; }
+
+.search {
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid var(--border);
+}
+
+.tags { display: flex; flex-wrap: wrap; gap: 8px; }
+
+.tag {
+  padding: 6px 12px;
+  border-radius: 50px;
+  background: var(--tag);
+  border: 1px solid var(--border);
+  cursor: pointer;
+}
+
+.tag.active { background: var(--accent); color: white; }
+
+.category {
+  margin-top: 26px;
+  padding-bottom: 6px;
+  border-bottom: 1px solid var(--border);
+  font-weight: 600;
+  color: var(--muted);
+}
+
+.card {
+  display: flex;
+  gap: 14px;
+  background: var(--card);
+  border-radius: 10px;
+  border: 1px solid var(--border);
+  margin-top: 14px;
+  padding: 14px;
+}
+
+.card img {
+  width: 110px;
+  height: 110px;
+  object-fit: cover;
+  border-radius: 8px;
+  border: 1px solid var(--border);
+}
+
+.card-body { flex: 1; }
+
+.number { color: var(--muted); font-size: 12px; }
+
+button {
+  margin-top: 8px;
+  padding: 8px 14px;
+  border-radius: 6px;
+  border: none;
+  background: var(--accent);
+  color: white;
+  cursor: pointer;
+}
+
+button:hover { opacity: 0.9; }
+
+footer { margin: 40px 0; text-align: center; color: var(--muted); }
+</style>
+</head>
+
+<body>
+<div class="container">
+  <header>
+    <h1>Prompt Library</h1>
+    <input id="searchInput" class="search" placeholder="Search prompts..." oninput="render()" />
+    <div id="tagContainer" class="tags"></div>
+  </header>
+
+  <main id="promptContainer"></main>
+
+  <footer>Powered by Notion + Gemini</footer>
+</div>
+
+<script>
+let prompts = [];
+let activeTag = null;
+
+async function load() {
+  const res = await fetch("/api/prompts");
+  prompts = await res.json();
+  prompts.forEach(p => p.tags = p.tags || []);
+  prompts.sort((a,b)=> a.category.localeCompare(b.category));
+  renderTags();
+  render();
+}
+
+function renderTags() {
+  const set = new Set();
+  prompts.forEach(p => p.tags.forEach(t=> set.add(t)));
+  const el = document.getElementById("tagContainer");
+  el.innerHTML = "";
+  [...set].sort().forEach(tag => {
+    const div = document.createElement("div");
+    div.className = "tag";
+    div.textContent = tag;
+    if (tag === activeTag) div.classList.add("active");
+    div.onclick = () => {
+      activeTag = (activeTag === tag) ? null : tag;
+      renderTags();
+      render();
+    };
+    el.appendChild(div);
+  });
+}
+
+function render() {
+  const container = document.getElementById("promptContainer");
+  const search = document.getElementById("searchInput").value.toLowerCase();
+  container.innerHTML = "";
+  let currentCategory = "";
+  let count = 1;
+
+  prompts
+    .filter(p =>
+      (!activeTag || p.tags.includes(activeTag)) &&
+      (p.title.toLowerCase().includes(search) || p.prompt.toLowerCase().includes(search))
+    )
+    .forEach(p => {
+      if (p.category !== currentCategory) {
+        currentCategory = p.category;
+        container.innerHTML += `<div class="category">${currentCategory}</div>`;
+      }
+
+      container.innerHTML += `
+        <div class="card">
+          <img src="/api/image?prompt=${encodeURIComponent(p.title)}"
+               onerror="this.src='https://via.placeholder.com/110?text=Limit+Hit'"/>
+          <div class="card-body">
+            <div class="number">#${count}</div>
+            <h3>${p.title}</h3>
+            <p>${p.prompt}</p>
+            <button onclick="navigator.clipboard.writeText(\`${p.prompt}\`)">
+              Copy
+            </button>
+          </div>
+        </div>
+      `;
+      count++;
+    });
+
+  if (count === 1) container.innerHTML = "<p>No prompts found.</p>";
+}
+
+document.addEventListener("DOMContentLoaded", load);
+</script>
+
+</body>
+</html>
