--- a/index.html
+++ b/index.html
@@ -1,181 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Prompt Library</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prompt Database</title>
 
-<style>
-:root {
-  --bg: #f8f9fb;
-  --card: #ffffff;
-  --text: #111;
-  --muted: #666;
-  --border: #e5e7eb;
-  --accent: #2563eb;
-  --tag: #eef2ff;
-}
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      background: #0f172a;
+      color: white;
+    }
 
-body {
-  margin: 0;
-  background: var(--bg);
-  color: var(--text);
-  font-family: system-ui, -apple-system, Segoe UI, sans-serif;
-}
+    header {
+      text-align: center;
+      padding: 25px 10px;
+      background: #020617;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      border-bottom: 1px solid #1f2937;
+    }
 
-.container { max-width: 900px; margin: auto; padding: 24px; }
+    h1 {
+      margin: 0;
+      font-size: 22px;
+    }
 
-header { display: flex; flex-direction: column; gap: 12px; }
+    .container {
+      max-width: 920px;
+      margin: auto;
+      padding: 16px;
+    }
 
-.search {
-  padding: 12px;
-  border-radius: 8px;
-  border: 1px solid var(--border);
-}
+    .search {
+      width: 100%;
+      padding: 12px 14px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      margin-bottom: 12px;
+      font-size: 14px;
+    }
 
-.tags { display: flex; flex-wrap: wrap; gap: 8px; }
+    .tags {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+      margin-bottom: 15px;
+    }
 
-.tag {
-  padding: 6px 12px;
-  border-radius: 50px;
-  background: var(--tag);
-  border: 1px solid var(--border);
-  cursor: pointer;
-}
+    .tag {
+      padding: 6px 10px;
+      background: #111827;
+      border-radius: 8px;
+      font-size: 12px;
+      cursor: pointer;
+      opacity: 0.7;
+    }
 
-.tag.active { background: var(--accent); color: white; }
+    .tag.active {
+      background: #2563eb;
+      opacity: 1;
+    }
 
-.category {
-  margin-top: 26px;
-  padding-bottom: 6px;
-  border-bottom: 1px solid var(--border);
-  font-weight: 600;
-  color: var(--muted);
-}
+    .prompt {
+      background: #020617;
+      border: 1px solid #1f2937;
+      border-radius: 12px;
+      padding: 14px;
+      margin-bottom: 14px;
+    }
 
-.card {
-  display: flex;
-  gap: 14px;
-  background: var(--card);
-  border-radius: 10px;
-  border: 1px solid var(--border);
-  margin-top: 14px;
-  padding: 14px;
-}
+    .title {
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 6px;
+    }
 
-.card img {
-  width: 110px;
-  height: 110px;
-  object-fit: cover;
-  border-radius: 8px;
-  border: 1px solid var(--border);
-}
+    .desc {
+      opacity: 0.8;
+      font-size: 12px;
+      margin-top: 4px;
+    }
 
-.card-body { flex: 1; }
+    .empty {
+      text-align: center;
+      opacity: 0.6;
+      margin-top: 40px;
+    }
 
-.number { color: var(--muted); font-size: 12px; }
-
-button {
-  margin-top: 8px;
-  padding: 8px 14px;
-  border-radius: 6px;
-  border: none;
-  background: var(--accent);
-  color: white;
-  cursor: pointer;
-}
-
-button:hover { opacity: 0.9; }
-
-footer { margin: 40px 0; text-align: center; color: var(--muted); }
-</style>
+    @media (max-width: 720px) {
+      h1 {
+        font-size: 18px;
+      }
+      .prompt {
+        padding: 12px;
+      }
+    }
+  </style>
 </head>
 
 <body>
-<div class="container">
   <header>
-    <h1>Prompt Library</h1>
-    <input id="searchInput" class="search" placeholder="Search prompts..." oninput="render()" />
-    <div id="tagContainer" class="tags"></div>
+    <h1>🔥 Prompt Database</h1>
+    <p style="opacity:.7;font-size:12px;">Powered by Notion — Fast, Public & Clean UI</p>
   </header>
 
-  <main id="promptContainer"></main>
+  <div class="container">
 
-  <footer>Powered by Notion + Gemini</footer>
-</div>
+    <input
+      class="search"
+      id="search"
+      placeholder="Search prompts..."
+    />
 
-<script>
-let prompts = [];
-let activeTag = null;
+    <div class="tags" id="tags"></div>
 
-async function load() {
-  const res = await fetch("/api/prompts");
-  prompts = await res.json();
-  prompts.forEach(p => p.tags = p.tags || []);
-  prompts.sort((a,b)=> a.category.localeCompare(b.category));
-  renderTags();
-  render();
-}
+    <div id="list"></div>
 
-function renderTags() {
-  const set = new Set();
-  prompts.forEach(p => p.tags.forEach(t=> set.add(t)));
-  const el = document.getElementById("tagContainer");
-  el.innerHTML = "";
-  [...set].sort().forEach(tag => {
-    const div = document.createElement("div");
-    div.className = "tag";
-    div.textContent = tag;
-    if (tag === activeTag) div.classList.add("active");
-    div.onclick = () => {
-      activeTag = (activeTag === tag) ? null : tag;
+    <div class="empty" id="empty" style="display:none;">
+      No prompts found 🔍
+    </div>
+
+  </div>
+
+  <script>
+    let prompts = [];
+    let activeTag = null;
+
+    async function loadPrompts() {
+      const res = await fetch("/api/prompts");
+      prompts = await res.json();
       renderTags();
       render();
-    };
-    el.appendChild(div);
-  });
-}
+    }
 
-function render() {
-  const container = document.getElementById("promptContainer");
-  const search = document.getElementById("searchInput").value.toLowerCase();
-  container.innerHTML = "";
-  let currentCategory = "";
-  let count = 1;
+    function renderTags() {
+      const tagContainer = document.getElementById("tags");
+      const allTags = new Set();
 
-  prompts
-    .filter(p =>
-      (!activeTag || p.tags.includes(activeTag)) &&
-      (p.title.toLowerCase().includes(search) || p.prompt.toLowerCase().includes(search))
-    )
-    .forEach(p => {
-      if (p.category !== currentCategory) {
-        currentCategory = p.category;
-        container.innerHTML += `<div class="category">${currentCategory}</div>`;
-      }
+      prompts.forEach(p => {
+        if (p.tags) {
+          p.tags.forEach(t => allTags.add(t));
+        }
+      });
 
-      container.innerHTML += `
-        <div class="card">
-          <img src="/api/image?prompt=${encodeURIComponent(p.title)}"
-               onerror="this.src='https://via.placeholder.com/110?text=Limit+Hit'"/>
-          <div class="card-body">
-            <div class="number">#${count}</div>
-            <h3>${p.title}</h3>
-            <p>${p.prompt}</p>
-            <button onclick="navigator.clipboard.writeText(\`${p.prompt}\`)">
-              Copy
-            </button>
-          </div>
-        </div>
-      `;
-      count++;
-    });
+      tagContainer.innerHTML = "";
+      [...allTags].forEach(tag => {
+        const span = document.createElement("div");
+        span.className = "tag";
+        span.innerText = tag;
 
-  if (count === 1) container.innerHTML = "<p>No prompts found.</p>";
-}
+        span.onclick = () => {
+          if (activeTag === tag) activeTag = null;
+          else activeTag = tag;
+          render();
+          renderTags();
+        };
 
-document.addEventListener("DOMContentLoaded", load);
-</script>
+        if (activeTag === tag) span.classList.add("active");
+        tagContainer.appendChild(span);
+      });
+    }
 
+    function render() {
+      const list = document.getElementById("list");
+      const empty = document.getElementById("empty");
+      const search = document.getElementById("search").value.toLowerCase();
+
+      const filtered = prompts.filter(p => {
+        const matchesText =
+          p.title.toLowerCase().includes(search) ||
+          (p.description || "").toLowerCase().includes(search);
+
+        const matchesTag =
+          !activeTag ||
+          (p.tags && p.tags.includes(activeTag));
+
+        return matchesText && matchesTag;
+      });
+
+      list.innerHTML = "";
+      empty.style.display = filtered.length ? "none" : "block";
+
+      filtered.forEach((p, i) => {
+        const div = document.createElement("div");
+        div.className = "prompt";
+
+        div.innerHTML = `
+          <div class="title">${i + 1}. ${p.title}</div>
+          <div>${p.prompt}</div>
+          <div class="desc">${p.description || ""}</div>
+        `;
+
+        list.appendChild(div);
+      });
+    }
+
+    document.getElementById("search").addEventListener("input", render);
+
+    loadPrompts();
+  </script>
 </body>
 </html>
