--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <div class="hero">
   <video autoplay loop muted playsinline>
-    <source src="/hero.mp4" type="video/mp4"/>
+    <source src="Public/hero.mp4" type="video/mp4"/>
   </video>
   <div class="overlay">
     <h1>Prompt Database</h1>
