--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     height:300px;
     overflow:hidden;
     border-bottom:1px solid rgba(255,255,255,.15);
+    background: #000; /* Added background for letterboxing */
   }
 
   .hero video{
     width:100%;
     height:100%;
-    object-fit:cover;
+    object-fit: contain; /* Ensures the entire video is visible */
   }
 
   .overlay{
@@ -35,6 +36,7 @@
     align-items:flex-end;
     padding:18px;
     background:linear-gradient(180deg,rgba(0,0,0,.1),rgba(0,0,0,.85));
+    pointer-events: none; /* Allows clicking through if needed */
   }
 
   .overlay h1{
@@ -118,7 +120,7 @@
 
 <div class="hero">
   <video autoplay loop muted playsinline>
-    <source src="Public/hero.mp4" type="video/mp4"/>
+    <source src="/hero.mp4" type="video/mp4"/>
   </video>
   <div class="overlay">
     <h1>Prompt Database</h1>
@@ -227,7 +229,6 @@ function render() {
 }
 
 function copyToClipboard(btn) {
-  // Find the prompt text: The sibling before the footer container
   const promptText = btn.parentElement.previousElementSibling.innerText;
   navigator.clipboard.writeText(promptText);
   
