--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     height:300px;
     overflow:hidden;
     border-bottom:1px solid rgba(255,255,255,.15);
-    background: #000; /* Added background for letterboxing */
+    background: #000; /* Black background for letterboxing */
   }
 
   .hero video{
     width:100%;
     height:100%;
     object-fit: contain; /* Ensures the entire video is visible */
+    display: block;
   }
 
   .overlay{
@@ -119,8 +120,8 @@
 <body>
 
 <div class="hero">
-  <video autoplay loop muted playsinline>
-    <source src="/hero.mp4" type="video/mp4"/>
+  <video autoplay loop muted playsinline poster="assets/logo.png">
+    <source src="hero.mp4" type="video/mp4"/>
   </video>
   <div class="overlay">
     <h1>Prompt Database</h1>
