--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 <div class="hero">
   <video autoplay loop muted playsinline poster="assets/logo.png">
-    <source src="Public/hero.mp4" type="video/mp4"/>
+    <source src="Public/prompts.mp4ß" type="video/mp4"/>
   </video>
   <div class="overlay">
     <h1>Prompt Database</h1>
